alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -223,7 +223,7 @@ a.article:hover {
 
 #content {
   width: 100%;
-  padding: 20px;
+  padding: 10px 20px;
   margin-left: 80px;
   min-height: 100vh;
   transition: all 0.3s;
